# kernelvm_20190720_samples

./: CMakeLists.txt  README.md
include/liblnn/: allocator.h  buffer.h  buffer_view.h  command_buffer.h  config.h  data_source.h  descriptor_pool.h  descriptor_set.h  device.h  device_props.h  evaluate.h  exceptions.h  init_glfw.h  input_cache.h  instance.h  layer.h  layer_def.h  load_mnist.h  modules.h  network.h  pipeline.h  pipeline_cache.h  pipeline_layout.h  print.h  setter.h  shader.h
shaders/: affine_backward.comp  affine_forward.comp  compile.sh  conv2_backward.comp  conv2_straight_backward.comp  conv_backward.comp  conv_forward.comp  conv_straight_backward.comp  conv_straight_forward.comp  init.comp  leaky_relu_backward.comp  leaky_relu_forward.comp  maxpooling_backward.comp  maxpooling_forward.comp  relu_backward.comp  relu_forward.comp  softmax_combined.comp  tanh_backward.comp  tanh_forward.comp
src/: CMakeLists.txt  config.cpp  conv10_network.cpp  conv3_network.cpp  conv4_network.cpp  conv4x_network.cpp  conv5_network.cpp  conv6_network.cpp  conv_network.cpp  create_affine_backward_pipeline.cpp  create_affine_forward_pipeline.cpp  create_conv2_backward_pipeline.cpp  create_conv2_straight_backward_pipeline.cpp  create_conv_backward_pipeline.cpp  create_conv_forward_pipeline.cpp  create_conv_straight_backward_pipeline.cpp  create_conv_straight_forward_pipeline.cpp  create_init_pipeline.cpp  create_max_pooling_backward_pipeline.cpp  create_max_pooling_forward_pipeline.cpp  create_relu_backward_pipeline.cpp  create_relu_forward_pipeline.cpp  create_softmax_combined_pipeline.cpp  create_tanh_backward_pipeline.cpp  create_tanh_forward_pipeline.cpp  evaluate.cpp  get_allocator.cpp  get_command_buffer.cpp  get_descriptor_pool.cpp  get_descriptor_set.cpp  get_device.cpp  get_device_props.cpp  get_instance.cpp  get_pipeline_cache.cpp  get_pipeline_layout.cpp  get_shader.cpp  input_cache.cpp  layer.cpp  load_mnist.cpp  main.cpp.old  (+16 more)
